--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,11 @@ repos:
     rev: "v0.16.0"
     hooks:
       - id: terraform-docs-go
-        args: ["markdown", "table", "--output-file", "README.md" ]
+        args: ["markdown", "table", "--output-file", "README.md", "./"]
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: "v1.74.1"
     hooks:
-      - id: terraform_fmt      
+      - id: terraform_fmt
+      - id: terraform_tflint
       - id: terraform_validate
+      - id: terraform_tfsec
