--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,15 @@
 repos:
   - repo: https://github.com/terraform-docs/terraform-docs
-    rev: "v0.16.0"
+    rev: "v0.17.0"
     hooks:
       - id: terraform-docs-go
         args: ["markdown", "table", "--output-file", "README.md", "./"]
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: "v1.74.1"
+    rev: "v1.89.1"
     hooks:
-      - id: terraform_fmt
-      - id: terraform_tflint
-      - id: terraform_validate
-      - id: terraform_tfsec
+      - id: terraform_fmt      
+      # - id: terraform_validate
+      - id: terraform_tflint        
+      # - id: terraform_trivy
+      #   args:
+      #       - --args=--severity=CRITICAL
