--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -8,140 +8,82 @@ on:
     branches:
     - main
 
-# Special permissions required for OIDC authentication
 permissions:
   id-token: write
   contents: read
   pull-requests: write
 
-# These environment variables are used by the Terraform AWS provider to setup OIDC authentication.
 env:
-  AWS_REGION: "us-east-1"  # Adjust to your AWS Region
+  AWS_REGION: "ap-south-1"  # Adjust to your AWS Region
 
 jobs:
-  terraform-plan:
-    name: 'Terraform Plan'
+  terraform:
+    name: 'Terraform CI'
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v4
 
-    # Setup AWS Credentials from GitHub OIDC provider
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
         aws-region: ${{ env.AWS_REGION }}
-        role-to-assume: arn:aws:iam::893304181614:role/githubaction-hostedrunner-role  # Update with your role ARN
+        role-to-assume: arn:aws:iam::893304181614:role/githubaction-hostedrunner-role
         role-session-name: GitHubActionsSession
 
-    # Install the latest version of the Terraform CLI
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
         terraform_wrapper: false
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
+    - name: Get changed files
+      id: changed-files
+      uses: tj-actions/changed-files@v19
+      with:
+        files: |
+          terraform/**/*.tf
 
-    # Checks that all Terraform configuration files adhere to a canonical format
-    # Will fail the build if not
-    - name: Terraform Format
-      run: terraform fmt -check
-
-    # Generates an execution plan for Terraform
-    # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
-    - name: Terraform Plan
-      id: tf-plan
+    - name: Set changed directories
+      id: set-changed-dirs
       run: |
-        export exitcode=0
-        terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+        echo "changed_dirs=$(echo ${{ steps.changed-files.outputs.all_changed_files }} | xargs -n 1 dirname | sort -u)" >> $GITHUB_ENV
 
-        echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
+    - name: Terraform Init and Plan
+      if: env.changed_dirs
+      run: |
+        for DIR in $changed_dirs; do
+          echo "Running in $DIR"
+          cd $DIR
+          terraform init
+          terraform fmt -check
+          terraform plan -detailed-exitcode -no-color -out=tfplan
+          terraform show -no-color tfplan > plan-output.txt
+          cd -
+        done
 
-        if [ $exitcode -eq 1 ]; then
-          echo Terraform Plan Failed!
-          exit 1
-        else 
-          exit 0
-        fi
-
-    # Save plan to artifacts  
-    - name: Publish Terraform Plan
+    - name: Upload Terraform Plans
       uses: actions/upload-artifact@v4
       with:
-        name: tfplan
-        path: tfplan
+        name: terraform-plans
+        path: '**/plan-output.txt'
 
-    # Create string output of Terraform Plan
-    - name: Create String Output
-      id: tf-plan-string
-      run: |
-        TERRAFORM_PLAN=$(terraform show -no-color tfplan)
-
-        delimiter="$(openssl rand -hex 8)"
-        echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
-        echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
-        echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
-        echo "" >> $GITHUB_OUTPUT
-        echo '```terraform' >> $GITHUB_OUTPUT
-        echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
-        echo '```' >> $GITHUB_OUTPUT
-        echo "</details>" >> $GITHUB_OUTPUT
-        echo "${delimiter}" >> $GITHUB_OUTPUT
-
-    # Publish Terraform Plan as task summary
-    - name: Publish Terraform Plan to Task Summary
-      env:
-        SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
-      run: |
-        echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
-
-    # If this is a PR post the changes
-    - name: Push Terraform Output to PR
+    - name: Create or Update Comment with Terraform Plans
+      uses: peter-evans/create-or-update-comment@v4
       if: github.ref != 'refs/heads/main'
-      uses: actions/github-script@v7
-      env:
-        SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
       with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const body = `${process.env.SUMMARY}`;
-            github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: body
-            })
-                
-  terraform-apply:
-    name: 'Terraform Apply'
-    if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
-    runs-on: ubuntu-latest
-    environment: production
-    needs: [terraform-plan]
-    
-    steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v4
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          Terraform Plans for the changed directories:
+          Each directory's plan output is uploaded as an artifact.
+        reactions: 'eyes'
 
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
-
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
-
-    # Download saved plan from artifacts  
-    - name: Download Terraform Plan
-      uses: actions/download-artifact@v4
-      with:
-        name: tfplan
-
-    # Terraform Apply
     - name: Terraform Apply
-      run: terraform apply -auto-approve tfplan
+      if: github.ref == 'refs/heads/main' && needs.terraform.outputs.tfplanExitCode == '2'
+      run: |
+        for DIR in $changed_dirs; do
+          echo "Applying in $DIR"
+          cd $DIR
+          terraform apply -auto-approve tfplan
+          cd -
+        done
