--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -17,8 +17,8 @@ env:
   AWS_REGION: "ap-south-1"  # Adjust to your AWS Region
 
 jobs:
-  terraform:
-    name: 'Terraform CI'
+  terraform-plan:
+    name: 'Terraform Plan'
     runs-on: ubuntu-latest
 
     steps:
@@ -37,53 +37,96 @@ jobs:
       with:
         terraform_wrapper: false
 
-    - name: Get changed files
-      id: changed-files
-      uses: tj-actions/changed-files@v19
-      with:
-        files: |
-          terraform/**/*.tf
+    - name: Terraform Init
+      run: terraform init
+      working-directory: environments/prod/eks
 
-    - name: Set changed directories
-      id: set-changed-dirs
+    - name: Terraform Format
+      run: terraform fmt -check
+      working-directory: environments/prod/eks
+
+    - name: Terraform Plan
+      id: tf-plan
       run: |
-        echo "changed_dirs=$(echo ${{ steps.changed-files.outputs.all_changed_files }} | xargs -n 1 dirname | sort -u)" >> $GITHUB_ENV
+        export exitcode=0
+        terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+        echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
+        if [ $exitcode -eq 1 ]; then
+          echo Terraform Plan Failed!
+          exit 1
+        else 
+          exit 0
+        fi
+      working-directory: environments/prod/eks
 
-    - name: Terraform Init and Plan
-      if: env.changed_dirs
-      run: |
-        for DIR in $changed_dirs; do
-          echo "Running in $DIR"
-          cd $DIR
-          terraform init
-          terraform fmt -check
-          terraform plan -detailed-exitcode -no-color -out=tfplan
-          terraform show -no-color tfplan > plan-output.txt
-          cd -
-        done
-
-    - name: Upload Terraform Plans
+    - name: Publish Terraform Plan
       uses: actions/upload-artifact@v4
       with:
-        name: terraform-plans
-        path: '**/plan-output.txt'
+        name: tfplan
+        path: tfplan
+      working-directory: environments/prod/eks
 
-    - name: Create or Update Comment with Terraform Plans
-      uses: peter-evans/create-or-update-comment@v4
+    - name: Create String Output
+      id: tf-plan-string
+      run: |
+        TERRAFORM_PLAN=$(terraform show -no-color tfplan)
+        delimiter="$(openssl rand -hex 8)"
+        echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
+        echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
+        echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
+        echo '```terraform' >> $GITHUB_OUTPUT
+        echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
+        echo '```' >> $GITHUB_OUTPUT
+        echo "</details>" >> $GITHUB_OUTPUT
+        echo "${delimiter}" >> $GITHUB_OUTPUT
+      working-directory: environments/prod/eks
+
+    - name: Publish Terraform Plan to Task Summary
+      env:
+        SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
+      run: echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
+      working-directory: environments/prod/eks
+
+    - name: Push Terraform Output to PR
       if: github.ref != 'refs/heads/main'
+      uses: actions/github-script@v7
+      env:
+        SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
       with:
-        issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          Terraform Plans for the changed directories:
-          Each directory's plan output is uploaded as an artifact.
-        reactions: 'eyes'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const body = `${process.env.SUMMARY}`;
+            github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: body
+            })
+
+  terraform-apply:
+    name: 'Terraform Apply'
+    if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
+    runs-on: ubuntu-latest
+    environment: production
+    needs: [terraform-plan]
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+
+    - name: Terraform Init
+      run: terraform init
+      working-directory: environments/prod/eks
+
+    - name: Download Terraform Plan
+      uses: actions/download-artifact@v4
+      with:
+        name: tfplan
+      working-directory: environments/prod/eks
 
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && needs.terraform.outputs.tfplanExitCode == '2'
-      run: |
-        for DIR in $changed_dirs; do
-          echo "Applying in $DIR"
-          cd $DIR
-          terraform apply -auto-approve tfplan
-          cd -
-        done
+      run: terraform apply -auto-approve tfplan
+      working-directory: environments/prod/eks
