--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -8,11 +8,13 @@ on:
     branches:
     - main
 
+# Special permissions required for OIDC authentication
 permissions:
   id-token: write
   contents: read
   pull-requests: write
 
+# These environment variables are used by the Terraform AWS provider to setup OIDC authentication.
 env:
   AWS_REGION: "ap-south-1"  # Adjust to your AWS Region
 
@@ -20,73 +22,88 @@ jobs:
   terraform-plan:
     name: 'Terraform Plan'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./environments/prod/eks
 
     steps:
+    # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v4
 
+    # Setup AWS Credentials from GitHub OIDC provider
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
         aws-region: ${{ env.AWS_REGION }}
-        role-to-assume: arn:aws:iam::893304181614:role/githubaction-hostedrunner-role
+        role-to-assume: arn:aws:iam::893304181614:role/githubaction-hostedrunner-role  # Update with your role ARN
         role-session-name: GitHubActionsSession
 
+    # Install the latest version of the Terraform CLI
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
         terraform_wrapper: false
 
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
-      working-directory: environments/prod/eks
 
+    # Checks that all Terraform configuration files adhere to a canonical format
+    # Will fail the build if not
     - name: Terraform Format
       run: terraform fmt -check
-      working-directory: environments/prod/eks
 
+    # Generates an execution plan for Terraform
+    # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
     - name: Terraform Plan
       id: tf-plan
       run: |
         export exitcode=0
         terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+
         echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
+
         if [ $exitcode -eq 1 ]; then
           echo Terraform Plan Failed!
           exit 1
         else 
           exit 0
         fi
-      working-directory: environments/prod/eks
 
+    # Save plan to artifacts  
     - name: Publish Terraform Plan
       uses: actions/upload-artifact@v4
       with:
         name: tfplan
         path: tfplan
-      working-directory: environments/prod/eks
 
+    # Create string output of Terraform Plan
     - name: Create String Output
       id: tf-plan-string
       run: |
         TERRAFORM_PLAN=$(terraform show -no-color tfplan)
+
         delimiter="$(openssl rand -hex 8)"
         echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
         echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
         echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
+        echo "" >> $GITHUB_OUTPUT
         echo '```terraform' >> $GITHUB_OUTPUT
         echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
         echo '```' >> $GITHUB_OUTPUT
         echo "</details>" >> $GITHUB_OUTPUT
         echo "${delimiter}" >> $GITHUB_OUTPUT
-      working-directory: environments/prod/eks
 
+    # Publish Terraform Plan as task summary
     - name: Publish Terraform Plan to Task Summary
       env:
         SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
-      run: echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
-      working-directory: environments/prod/eks
+      run: |
+        echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
 
+    # If this is a PR post the changes
     - name: Push Terraform Output to PR
       if: github.ref != 'refs/heads/main'
       uses: actions/github-script@v7
@@ -102,7 +119,7 @@ jobs:
                 repo: context.repo.repo,
                 body: body
             })
-
+                
   terraform-apply:
     name: 'Terraform Apply'
     if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
@@ -111,22 +128,24 @@ jobs:
     needs: [terraform-plan]
     
     steps:
+    # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v4
 
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
 
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
-      working-directory: environments/prod/eks
 
+    # Download saved plan from artifacts  
     - name: Download Terraform Plan
       uses: actions/download-artifact@v4
       with:
         name: tfplan
-      working-directory: environments/prod/eks
 
+    # Terraform Apply
     - name: Terraform Apply
       run: terraform apply -auto-approve tfplan
-      working-directory: environments/prod/eks
