--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -95,4 +95,6 @@ jobs:
             const body = `🔍 **Detailed Terraform Plan Output:**\n${summary}\nPlease review the proposed changes. 👀`;
             const comment = await github.rest.issues.createComment({
                 issue_number: context.issue.number,
+                body: body
+            });
        
