--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -81,10 +81,12 @@ jobs:
         for plan in $(find . -name 'tfplan-output.txt'); do
           DIR=$(dirname "$plan")
           SUMMARY=$(cat "$plan")
-          echo "Terraform Plan Output for $DIR:" >> summaries/summary.md
+          echo "> Terraform Plan Output for `$DIR`:" >> summaries/summary.md
+          echo "<details>" >> summaries/summary.md
           echo '```' >> summaries/summary.md
           cat "$plan" >> summaries/summary.md
           echo '```' >> summaries/summary.md
+          echo "</details>" >> summaries/summary.md
           echo '' >> summaries/summary.md
         done
 
