--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: terraform_tflint      
       - id: terraform_checkov
         args:
-          # - --args=--quiet
+          - --args=--quiet
           - --args=--skip-check CKV_TF_1
 
       # - id: terraform_trivy
