--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,13 +8,11 @@ repos:
     rev: "v1.89.1"
     hooks:
       - id: terraform_fmt      
-      # - id: terraform_validate
-      - id: terraform_tflint      
+      - id: terraform_tflint
+      - id: infracost_breakdown
+        args:
+          - --args=--path=./environments/prod/eks
       - id: terraform_checkov
         args:
           # - --args=--quiet
           - --args=--skip-check CKV_TF_1
-
-      # - id: terraform_trivy
-      #   args:
-      #       - --args=--severity=CRITICAL
