--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,14 +3,11 @@ repos:
     rev: "v0.17.0"
     hooks:
       - id: terraform-docs-go
-        args: ["markdown", "table", "--output-file", "README.md", "./"]
+        args: ["markdown", "table", "--output-file", "README.md", "./modules/eks-with-managed-ng"]
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: "v1.89.1"
     hooks:
       - id: terraform_fmt
-      - id: infracost_breakdown
-        args:
-          - --args=--path=./environments/prod/eks
       - id: terraform_tflint      
       - id: terraform_checkov
         args:
