--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ repos:
     rev: "v1.89.1"
     hooks:
       - id: terraform_fmt
+      - id: terraform_validate
+        exclude: ^modules/
       - id: terraform_checkov
         args:
           # - --args=--quiet
